<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActMain">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">



        </LinearLayout>-->

        <CheckedTextView
            android:id="@+id/check_auto_click_in_locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_auto_click_in_locked"
            android:textColor="@color/colorAccent" />


        <CheckedTextView
            android:id="@+id/check_open_card_on_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_open_card_on_enter"
            android:textColor="@color/colorAccent" />

        <CheckedTextView
            android:id="@+id/check_auto_click_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_auto_click_card"
            android:textColor="@color/colorAccent" />

        <CheckedTextView
            android:id="@+id/check_close_nfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_close_nfc"
            android:textColor="@color/colorAccent" />

        <Button

            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_btn"
            android:padding="@dimen/padding_btn_start"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_btn_start" />

        <ImageButton
            android:id="@+id/imgBtn_info"
            android:layout_width="@dimen/img_btn_src"
            android:layout_height="@dimen/img_btn_src"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/img_btn_margin_top"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/list_ic_empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/switch_nfc"
            android:typeface="monospace" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:autoLink="email"
        android:gravity="center"
        android:text="@string/author" />

</FrameLayout>
